--- a/rust-analyzer.csproj
+++ b/rust-analyzer.csproj
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
@@ -15,7 +16,9 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisLevel>latest</AnalysisLevel>
-    <Version>6.0.0</Version>
+    <Version>7.0.0</Version>
+    <!-- Enable analyzer release tracking -->
+    <EnableReleaseTracking>true</EnableReleaseTracking>
   </PropertyGroup>
 
   <ItemGroup>
