--- a/rust-analyzer.csproj
+++ b/rust-analyzer.csproj
@@ -9,6 +9,7 @@
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
     <Nullable>enable</Nullable>
     <Version>8.0.5</Version>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
