--- a/rust-analyzer.csproj
+++ b/rust-analyzer.csproj
@@ -4,29 +4,28 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <IncludeBuildOutput>false</IncludeBuildOutput>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <DevelopmentDependency>true</DevelopmentDependency>
-    <NoPackageAnalysis>true</NoPackageAnalysis>
-    <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
+    <DevelopmentDependency>false</DevelopmentDependency>
+    <NoPackageAnalysis>false</NoPackageAnalysis>
+    <SuppressDependenciesWhenPacking>false</SuppressDependenciesWhenPacking>
     <AnalyzerRoslynVersion>4.7.0</AnalyzerRoslynVersion>
     <LangVersion>latest</LangVersion>
     <IsPackable>true</IsPackable>
     <RootNamespace>RustAnalyzer</RootNamespace>
     <AssemblyName>rust-analyzer</AssemblyName>
-    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <Version>8.0.7</Version>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisLevel>latest</AnalysisLevel>
-    <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
-    <Nullable>enable</Nullable>
-    <Version>8.0.6</Version>
-    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
     <PackageReference Include="System.Text.Json" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\$(Configuration)\$(TargetFramework)\rust-analyzer.dll" Pack="true" PackagePath="analyzers/dotnet/cs/" />
   </ItemGroup>
 
 </Project>
