refactor(analyzer): improve hook suggestions format - Add plugin source to hook suggestions - Fix analyzer configuration in project file - Improve code organization in UnusedMethodAnalyzer

--- a/rust-analyzer.csproj
+++ b/rust-analyzer.csproj
@@ -16,6 +16,8 @@
     <Version>8.0.7</Version>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisLevel>latest</AnalysisLevel>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <AnalyzerReleaseTracking>true</AnalyzerReleaseTracking>
   </PropertyGroup>
 
   <ItemGroup>
