feat(analyzer): add strict version validation
- Add compilation error (RUST002) for invalid RustVersion

- Add compilation error (RUST001) for missing RustVersion

- Improve error messages with clear instructions

- Move version validation before initialization

- Add detailed diagnostic descriptions

--- a/rust-analyzer.csproj
+++ b/rust-analyzer.csproj
@@ -20,6 +20,7 @@
     <AnalyzerReleaseTracking>true</AnalyzerReleaseTracking>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <RustVersion>LastVersion</RustVersion>
   </PropertyGroup>
 
   <ItemGroup>
